feat: list, find by id and run
