# internal/server/engine.go
@@ -24,7 +24,11 @@ func GetEngine(environment di.Environment) *gin.Engine {
 
 	tokenAuthenticationRouter := router.Group("")
 	tokenAuthenticationRouter.Use(environment.AuthenticationMiddleware.TokenAuthentication)
-	tokenAuthenticationRouter.GET("/health2", health.Health)
+	tokenAuthenticationRouter.GET("/jobs", environment.JobHandler.List)
+	tokenAuthenticationRouter.GET("/jobs/:id", environment.JobHandler.FindById)
+	tokenAuthenticationRouter.POST("/jobs/:id/run", environment.JobHandler.Run)
+	//	tokenAuthenticationRouter.GET("/jobs/running/:rid/status", health.Health)
+	//	tokenAuthenticationRouter.GET("/jobs/running/:rid/logs", health.Health)
 
 	return r
 }
